--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,22 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --app-bg-color: #111;
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-plus: var(--font-plus-jakarta-sans), sans;
+  --font-poppins: var(--font-poppins), sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+@utility app-bg-dots-pattern {
+  background-color: var(--app-bg-color);
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  --dot-size: 1px;
+  background-image: radial-gradient(
+    circle,
+    rgb(107 114 128 / 0.5) var(--dot-size),
+    transparent var(--dot-size)
+  );
+  background-size: 24px 24px;
 }
