feat: add project management features; implement ProjectsPage, ProjectTile, and related components

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,5 +16,5 @@ body {
 }
 
 @utility button {
-  @apply hover:brightness-[120%] transition-all active:scale-95 active:brightness-95 disabled:scale-100 disabled:brightness-50 disabled:pointer-events-none select-none;
+  @apply hover:brightness-[120%] transition-all active:scale-95 active:brightness-95 disabled:scale-100 disabled:brightness-50 disabled:pointer-events-none select-none not-disabled:cursor-pointer;
 }
