--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,8 +13,22 @@ body {
 @theme inline {
   --font-plus: var(--font-plus-jakarta-sans), sans;
   --font-poppins: var(--font-poppins), sans-serif;
+
+  --shadow-card: 4px 4px 12px rgba(0, 0, 0, 0.4);
+
+  /* Animations */
+  --animate-input-border: input-border 750ms ease-in-out infinite alternate;
 }
 
 @utility button {
   @apply hover:brightness-[120%] transition-all active:scale-95 active:brightness-95 disabled:scale-100 disabled:brightness-50 disabled:pointer-events-none select-none not-disabled:cursor-pointer;
+}
+
+@keyframes input-border {
+  from {
+    border-color: rgba(255, 255, 255, 0.3);
+  }
+  to {
+    border-color: rgba(255, 255, 255, 0.15);
+  }
 }
